--- a/index.html
+++ b/index.html
@@ -1,10 +1,74 @@
 <!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Test</title>
-  </head>
-  <body>
-    <h1>GitHub Pages works</h1>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Product Information</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <style>
+    body {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+      max-width: 640px;
+      margin: 60px auto;
+      padding: 0 20px;
+      line-height: 1.6;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 1.8rem;
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-size: 1rem;
+      color: #444;
+    }
+
+    .cta {
+      display: inline-block;
+      margin-top: 30px;
+      padding: 16px 28px;
+      background-color: #e60023; /* Pinterest red */
+      color: #fff;
+      text-decoration: none;
+      font-size: 1rem;
+      font-weight: 600;
+      border-radius: 8px;
+    }
+
+    .cta:hover {
+      opacity: 0.9;
+    }
+
+    .disclaimer {
+      margin-top: 40px;
+      font-size: 0.85rem;
+      color: #777;
+    }
+  </style>
+</head>
+
+<body>
+
+  <h1>Advanced Amino Formula</h1>
+
+  <p>
+    High absorption amino acid formula designed to support workout performance,
+    energy, and faster muscle recovery.
+  </p>
+
+  <!-- 👇 CAMBIA QUI IL LINK -->
+  <a class="cta" 
+     href="https://www.advancedbionutritionals.com/DS24/Advanced-Amino/Muscle-Mass-Loss/HD.htm#aff=A4440911" 
+     target="_blank" 
+     rel="nofollow sponsored">
+     Info & Acquisto
+  </a>
+
+  <p class="disclaimer">
+    This page contains affiliate links. I may earn a commission at no extra cost to you.
+  </p>
+
+</body>
 </html>
