--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       display: inline-block;
       margin-top: 30px;
       padding: 16px 28px;
-      background-color: #e60023; /* Pinterest red */
+      background-color: #e60023;
       color: #fff;
       text-decoration: none;
       font-size: 1rem;
@@ -40,12 +40,6 @@
     .cta:hover {
       opacity: 0.9;
     }
-
-    .disclaimer {
-      margin-top: 40px;
-      font-size: 0.85rem;
-      color: #777;
-    }
   </style>
 </head>
 
@@ -54,21 +48,15 @@
   <h1>Advanced Amino Formula</h1>
 
   <p>
-    High absorption amino acid formula designed to support workout performance,
-    energy, and faster muscle recovery.
+    Click the red button below to view detailed product information and purchase the product.
   </p>
 
-  <!-- 👇 CAMBIA QUI IL LINK -->
-  <a class="cta" 
-     href="https://www.advancedbionutritionals.com/DS24/Advanced-Amino/Muscle-Mass-Loss/HD.htm#aff=A4440911" 
-     target="_blank" 
+  <a class="cta"
+     href="https://www.advancedbionutritionals.com/DS24/Advanced-Amino/Muscle-Mass-Loss/HD.htm?aff=A4440911"
+     target="_blank"
      rel="nofollow sponsored">
-     Info & Acquisto
+     Click Here
   </a>
-
-  <p class="disclaimer">
-    This page contains affiliate links. I may earn a commission at no extra cost to you.
-  </p>
 
 </body>
 </html>
