--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       display: inline-block;
       margin-top: 30px;
       padding: 16px 28px;
-      background-color: #e60023;
+      background-color: #f39c12;
       color: #fff;
       text-decoration: none;
       font-size: 1rem;
