--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <h1>Advanced Amino Formula</h1>
 
   <p>
-    Click the red button below to view detailed product information and purchase the product.
+    Click the orange button below to view product details and make a purchase.
   </p>
 
   <a class="cta"
